[tool.poetry]
name = "cookiecutter-template"
version = "0.1.0"
description = "A git template for cookiecutter"
authors = ["Minato <82735346+minato-ellie@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
pytest = "^7.4.0"
cookiecutter = "^2.3.0"
pdoc = "^14.0.0"
ruff = "^0.0.286"
black = "^23.7.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
nox = "^2023.4.22"
cookiecutter = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
